nginx-deployment.yml
##################################################
# Deployment to create NGINX Containers
##################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
  labels:
    deploy: nginx
    version: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: "2"
  template:
    metadata:
      labels:
        app: nginx
        version: "2"
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: echo-txt
          mountPath: /usr/share/nginx/html/echo
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 10
      volumes:
      - name: echo-txt
        configMap:
          name: nginx-static-files
          items:
          - key: echo.txt.v2
            path: test.txt

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  labels:
    deploy: nginx
    version: "1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      version: "1"
  template:
    metadata:
      labels:
        app: nginx
        version: "1"
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.9
        ports:
        - containerPort: 80
        volumeMounts:
        - name: echo-txt
          mountPath: /usr/share/nginx/html/echo
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 10
      volumes:
      - name: echo-txt
        configMap:
          name: nginx-static-files
          items:
          - key: echo.txt.v1
            path: test.txt
---
##################################################
# NGINX Services
##################################################
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    service: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
